@startuml Database Relation

entity Authors {
    + string name
    + HasMany authorBooks
}
entity AuthorBooks {
    - primary(book,author)
    + BelongsTo book
    + BelongsTo author
}
entity Book {
    + string title
    + string pageCount
    + string thumbnail
    + string preview
    + string isbn
    + string id_api
    + BelongsTo publisher
    + HasMany authorBooks
    + HasMany userBookReview
    + HasMany userBook
}
note right of Book::isbn
    Usar ISBN para buscas internas
endnote
note right of Book::id_api
    Usar id_api para armazenar o ID
    do livro na API e para acessar
    detalhes do livro na API
endnote
entity User {}
entity UserBook {
    + date readingFrom
    + date readingTo
    + tinyint stars
    + BelongsTo book
    + BelongsTo user
    + HasMany userBookReview
}
entity UserBookReview {
    + created_at
    + updated_at
    + deleted_at
    + HasOne userBook
    + BelongsTo book
}
entity UserBookNotes {
    + string note
    + created_at
    + updated_at
    + BelongsTo userBook
}
entity Publisher {
    + string name
}

AuthorBooks }|--|| Authors
AuthorBooks }|--|| Book
UserBook }|--|| Book
UserBook }|--|| User
UserBookNotes }|--|| User
UserBookReview |o--|| UserBook
UserBookReview }o--|| Book
UserBookNotes }o--|| UserBook
Book }o--|| Publisher

@enduml
